# rightnow-agent-app-fullstack

./: .env.example  .env.sample  .env.template  .eslintrc.json  .gitignore  .pre-commit-config.yaml  AGENT_INFRASTRUCTURE_ANALYSIS.md  AGENT_SETUP_AUDIT.md  AGENT_SUBSTRATE_ARCHITECTURE.md  ANALYSIS_INDEX.md  API_AUDIT.txt  API_SURFACE_FINDINGS.md  APPS_SDK_AUDIT_REPORT.md  APPS_SDK_SCAFFOLD_PLAN.md  ARCHITECTURE_STRESS_TEST.md  ASSESSMENT_INDEX.md  ASSESSMENT_SUMMARY.md  AUDIT_INDEX.md  CANONICAL_AGENT_VALIDATION.md  CANON_AUDIT_RESULTS.md  CODEOWNERS  COMMIT_PHASE4.md  CONTRIBUTING.md  CROSS_REFERENCE_ANALYSIS_V4.md  DEPLOYMENT_DEBUG_NOTES.md  DEPLOYMENT_GUIDE_V4.md  DEPLOYMENT_STATUS.md  GOVERNANCE_AUDIT.md  HOW_TO_USE_MCP_INSPECTOR.md  IMPLEMENTATION_SUMMARY.md  LEGACY_CODE_INVENTORY.md  MANUAL_SCHEMA_FIX.md  MCP_INSPECTOR_SETUP.md  MONO_REPO_ARCHITECTURE_ANALYSIS.md  Makefile  NEXT_PHASE_HANDOFF.md  NOTIFICATION_ARCHITECTURE_GUIDE.md  NOTIFICATION_MIGRATION_GUIDE.md  OBJECTIVE_ASSESSMENT_V4_REALITY.md  ONBOARDING_UNIFIED_FLOW.md  (+67 more)
.husky/: pre-commit
_agent_framework_export/: pyproject.toml  requirements.txt
_agent_framework_export/examples/knowledge-agent/: agent.py
_agent_framework_export/integrations/: __init__.py
_agent_framework_export/integrations/yarnnn/: __init__.py
_agent_framework_export/yarnnn_agents/: __init__.py  base.py  governance.py  memory.py
api/: .env.example  DEPLOYMENT.md  INTEGRATION_COMPLETE.md  Makefile  RENDER_TROUBLESHOOTING.md  __init__.py  alembic.ini  build.sh  pyproject.toml  requirements-dev.txt  requirements-local.txt  requirements.txt  smoke_tests.sh  test_db_function.py  test_deployment.py  test_dual_mode_canon.py  test_end_to_end.py  test_memory_capture_flow.py  test_worker_imports.py
artifacts/: sidebar-topbar-nav.diff  test-report.json  test-report.md
codex/: AGENTS.md  PROJECT_CONTEXT.md  README.playwright.md  codex_workflow_guide.md  setup_task_env.sh
docs/: AGENT_EXECUTION_INTEGRATION_TEST.md  API_BASKETS.md  BACKFILL_README.md  BASKETS_API_CONTRACT.md  BASKET_AND_BLOCK_MODEL.md  BASKET_BUILDING_BLOCKS_AUDIT.md  BASKET_INFERENCE_SPEC.md  BASKET_MANAGEMENT_FLOW.md  BFF_DATA_ACCESS_PATTERN.md  BLOCKS_QUEUE_REFLOW.md  CANON_COMPLIANCE_GAP_MITIGATION.md  CANON_EXECUTION_PLAN_DOCUMENTS_V1.md  CHANGELOG.md  CLAUDE_REMOTE_MCP.md  CONTEXT_ITEMS_API.md  CRITICAL_CONTEXT.md  DEV_NOTES.md  DOCUMENTATION_REFACTOR_PLAN_V4.md  DOCUMENT_COMPOSITION_REFACTOR_PLAN.md  FRONTEND_AMBIENT_CANON.md  FRONTEND_AUDIT_STRATEGY.md  FRONTEND_CANON_v1.3.1.md  FRONTEND_MEMORY_CAPTURE_REFACTORING.md  FRONTEND_SCHEMA_AUDIT_RESULTS.md  FUTURE_DELETION_AGENT_DISCUSSION.md  GOVERNANCE_IMPLEMENTATION_COMPLETE.md  GOVERNANCE_TESTING_ECOSYSTEM.md  MCP_INTEGRATION_ARCHITECTURE.md  MCP_LAUNCH_CHECKLIST.md  MCP_OBSERVABILITY_PLAN.md  (+101 more)
(+3287 files in other folders)
